--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h1>Certificates</h1>
                 <ul class="blogs-container">
                     <li class="card2">
-                        <img class="certificate-pic" src="">
+                        <img class="certificate-pic" src="Judith Maldonado - Python.png">
                     </li>
                 </ul>
             </div>
