--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                         <img class="certificate-pic" src="Judith Maldonado - Python.png">
                     </li>
                 </ul>
+                <ul class="blogs-container">
+                    <li class="card2">
+                        <img class="certificate-pic" src="Judith Maldonado - Pandas.png">
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
