--- a/index.html
+++ b/index.html
@@ -95,6 +95,26 @@
                         <img class="certificate-pic" src="Judith Maldonado - Pandas.png">
                     </li>
                 </ul>
+                <ul class="blogs-container">
+                    <li class="card2">
+                        <img class="certificate-pic" src="Judith Maldonado - Intro to Machine Learning.png">
+                    </li>
+                </ul>
+                 <ul class="blogs-container">
+                    <li class="card2">
+                        <img class="certificate-pic" src="Judith Maldonado - Intermediate Machine Learning.png">
+                    </li>
+                </ul>
+                <ul class="blogs-container">
+                    <li class="card2">
+                        <img class="certificate-pic" src="Judith Maldonado - Intro to Deep Learning.png">
+                    </li>
+                </ul>
+                 <ul class="blogs-container">
+                    <li class="card2">
+                        <img class="certificate-pic" src="Judith Maldonado - Computer Vision.png">
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
